@@ -1,98 +1,87 @@
-<option type="enum" id="opt/epsonepl-Density">
+<option type="enum" id="opt/epsonepl-FlowControl">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
-   <en>Density</en>
+   <en>Flow Control</en>
   </arg_longname>
   <arg_shortname>
-   <en>Density</en><!-- backends only know <en> shortnames! -->
+   <en>Flow Control</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
-   <arg_group>Adjustment</arg_group>
-   <arg_order>205</arg_order>
+   <arg_group>General</arg_group>
+   <arg_order>200</arg_order>
    <arg_spot>B</arg_spot>
    <arg_substitution />
-   <arg_proto>EplDensity=%s,</arg_proto>
+   <arg_proto>EplFlowControl=%s,</arg_proto>
   </arg_execution>
   <constraints>
      <constraint sense="true">
       <driver>epl5700l</driver>
-      <arg_defval>ev/1003</arg_defval>
+      <arg_defval>ev/1000</arg_defval>
      </constraint>
+<!--
      <constraint sense="true">
       <driver>epl5800l</driver>
-      <arg_defval>ev/1003</arg_defval>
+      <arg_defval>ev/1000</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>epl5900l</driver>
-      <arg_defval>ev/1003</arg_defval>
+      <arg_defval>ev/1000</arg_defval>
      </constraint>
+-->
   </constraints>
   <enum_vals>
-   <enum_val id="ev/1001">
+   <enum_val id="ev/1000">
     <ev_longname>
-     <en>1</en>
+     <en>Off</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>1</en>
+     <en>Off</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>1</ev_driverval>
+    <ev_driverval>off</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/1001">
+    <ev_longname>
+     <en>USB (libusb)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>libusb</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>libusb</ev_driverval>
    </enum_val>
    <enum_val id="ev/1002">
     <ev_longname>
-     <en>2</en>
+     <en>USB (kernel /dev/usb/lp0)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>2</en>
+     <en>USB (kernel /dev/usb/lp0)</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>2</ev_driverval>
+    <ev_driverval>/dev/usb/lp0</ev_driverval>
    </enum_val>
    <enum_val id="ev/1003">
     <ev_longname>
-     <en>3</en>
+     <en>USB (kernel /dev/usb/lp1)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>3</en>
+     <en>USB (kernel /dev/usb/lp1)</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>3</ev_driverval>
-   </enum_val>
-   <enum_val id="ev/1004">
-    <ev_longname>
-     <en>4</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>4</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval>4</ev_driverval>
-   </enum_val>
-   <enum_val id="ev/1005">
-    <ev_longname>
-     <en>5</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>5</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval>5</ev_driverval>
+    <ev_driverval>/dev/usb/lp1</ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
